crates/autoresolve/tests/compile_fail/scoped_parent_not_module_qualified.stderr
error: expected identifier
  --> tests/compile_fail/scoped_parent_not_module_qualified.rs:12:15
   |
12 | #[base(scoped(123), helper_module_exported_as = crate::request_base_helper)]
   |               ^^^
